--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.0'
 services:
   api:
-    container_name: cailab-lims-push-service
-    build: ./api
+    container_name: cailab-push-service
+    build: ./
     working_dir: /app
     command: ['yarn', 'run', 'production']
     restart: always
     volumes:
-      - /shared/cailab-auth/logs:/app/logs
+      - /shared/cailab-push-service/logs:/app/logs
     network_mode: bridge
